--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </a>
 
             <!-- Card for Redshift Infographic -->
-            <a href="infographic-redshift.html" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 ease-in-out">
+            <a href="Redshift.html" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 ease-in-out">
                 <div class="flex items-center mb-4">
                     <div class="p-3 rounded-full bg-green-100 text-green-600 mr-4">
                         <!-- Heroicon: Chart Pie -->
