--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <main class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 fade-in-up">
 
             <!-- Card for Advance Study Guide -->
-            <a href="Advance-Study-Guide.html" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 ease-in-out">
+            <a href="glue.html" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 ease-in-out">
                 <div class="flex items-center mb-4">
                     <div class="p-3 rounded-full bg-blue-100 text-blue-600 mr-4">
                         <!-- Heroicon: Document Text -->
@@ -68,7 +68,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
                         </svg>
                     </div>
-                    <h2 class="text-xl font-semibold text-gray-800">Advanced Study Guide</h2>
+                    <h2 class="text-xl font-semibold text-gray-800">AWS Glue Study Guide</h2>
                 </div>
                 <p class="text-gray-600">In-depth notes and guides on advanced topics.</p>
             </a>
